--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 <body>
     <section class="container">
         <header>
-            <h1>Job vacancy at ESPOIR UNLIMITED ENTERPRISES</h1>
+            <h1>Job vacancy at Mira Voyage</h1>
         </header>
         <section>
-            <h3>Job Application form</h3>
-            <p>Check your email after the successful completion of this form, Goodluck!</p>
+            <div class="center">
+                <h3>Job Application form</h3>
+                <p>Please Fill Out The Form Below To Submit Your Job Application.</p>
+               <p>Check your email after the successful completion of this form, Goodluck!</p>
+            </div>
             <div class="flex">
                 <form action="form processor.html" method="get"> 
                     <div class="fin">
@@ -33,11 +36,11 @@
                             <select id="job" name="job" placeholder="click for job position">
                                 <option value="administrative Assistant">Administrative Assistant</option>
                                 <option value="executive Assistant">Executive Assistant</option>
-                                <option vaalue="marketing manager">Marketion Manager</option>
+                                <option vaalue="marketing manager">Marketing Manager</option>
                                 <option value="customer service representative">Customer Service Representative</option>
                             </select>
                             <label for="message">Educational Background</label>
-                            <textarea id="message" cols="30" rows="5" required placeholder="Type"></textarea>
+                            <textarea id="message" cols="30" rows="5" required placeholder="Enter Details"></textarea>
                         </div>
                         <div class="two">
                             <p>Required Skills</p>
