--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <section>
             <div class="center">
-                <h3>Job Application form</h3>
+                <h3>Job application form</h3>
                 <p>Please Fill Out The Form Below To Submit Your Job Application.</p>
                <p>Check your email after the successful completion of this form, Goodluck!</p>
             </div>
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="submit"><input type="submit" value="submit">
+                    <input type="submit" value="submit" name="submit">
                 </form>       
             </div>
         </section>
